# Sixthsense

./: .gitignore  Dockerfile  README.md  USAGE.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: secrets.yaml.template  settings.yaml
src/: config.py  database.py  main.py
src/backtest/: analytics.py  data_loader.py  engine.py
src/execution/: broker.py  order_manager.py
src/monitoring/: alerts.py  dashboard.py  trade_log.py
src/signals/: base.py  insider.py  news.py  political.py  price_action.py
src/strategy/: exit_manager.py  llm_agent.py  position_sizer.py  risk_manager.py  scorer.py
tests/: conftest.py  test_agent.py  test_config.py  test_database.py
tests/test_backtest/: test_engine.py
tests/test_signals/: test_price_action.py
tests/test_strategy/: test_exit_manager.py  test_position_sizer.py  test_risk_manager.py
